# signaletic

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cross-build-all.sh  cross-build-arm.sh  cross-build-wasm.sh  docker-build-wasm.sh  run-wasm-tests.sh
.github/workflows/: build.yaml
docs/contributing/: developing-a-signal.md
hosts/daisy/: build-all-daisy.sh
hosts/daisy/examples/: Makefile
hosts/daisy/examples/bluemchen/: Makefile
hosts/daisy/examples/bluemchen/bare-board-test/: Makefile
hosts/daisy/examples/bluemchen/bare-board-test/src/: bluemchen-bare-board-test.cpp
hosts/daisy/examples/bluemchen/calibrator/: Makefile
hosts/daisy/examples/bluemchen/calibrator/src/: signaletic-bluemchen-calibrator.cpp
hosts/daisy/examples/bluemchen/chorus/: Makefile
hosts/daisy/examples/bluemchen/chorus/src/: signaletic-bluemchen-chorus.cpp
hosts/daisy/examples/bluemchen/dusting/: Makefile
hosts/daisy/examples/bluemchen/dusting/src/: signaletic-nehcmeulb-dusting.cpp  starlings-bluemchen-dusting.cpp
hosts/daisy/examples/bluemchen/filter/: Makefile
hosts/daisy/examples/bluemchen/filter/include/: bob-filter.h
hosts/daisy/examples/bluemchen/filter/src/: bob-filter.c  signaletic-bluemchen-filter.cpp
hosts/daisy/examples/bluemchen/looper/: Makefile
hosts/daisy/examples/bluemchen/looper/include/: looper.h
hosts/daisy/examples/bluemchen/looper/src/: looper.c  signaletic-bluemchen-looper.cpp  starlings-bluemchen-looper.cpp
hosts/daisy/examples/bluemchen/oscillator/: Makefile
hosts/daisy/examples/bluemchen/oscillator/src/: signaletic-bluemchen-oscillator.cpp  starlings-bluemchen-oscillator.cpp
hosts/daisy/examples/bluemchen/reverb/: Makefile
hosts/daisy/examples/bluemchen/reverb/1962a/: Makefile
hosts/daisy/examples/bluemchen/reverb/1962b/: Makefile
hosts/daisy/examples/bluemchen/reverb/1962c/: Makefile
hosts/daisy/examples/bluemchen/reverb/jcrev/: Makefile
hosts/daisy/examples/bluemchen/reverb/moorer/: Makefile
hosts/daisy/examples/bluemchen/reverb/src/: signaletic-bluemchen-reverb.cpp
hosts/daisy/examples/bluemchen/src/: libflock-bluemchen-example.cpp  starlings-bluemchen-example.cpp
hosts/daisy/examples/dpt/: Makefile
hosts/daisy/examples/dpt/lfos/: Makefile
hosts/daisy/examples/dpt/passthrough/: Makefile
hosts/daisy/examples/dpt/triangles/: Makefile
hosts/daisy/examples/lichen-bifocals/filter/: Makefile
hosts/daisy/examples/lichen-bifocals/sine-oscillator/: Makefile
hosts/daisy/examples/lichen-four/: Makefile
hosts/daisy/examples/lichen-four/cv-tools/: Makefile
hosts/daisy/examples/lichen-four/lfos/: Makefile
hosts/daisy/examples/lichen-four/sine-cv/: Makefile
hosts/daisy/examples/lichen-freddie/: Makefile
hosts/daisy/examples/lichen-freddie/bare-board-test/: Makefile
hosts/daisy/examples/lichen-freddie/lichen-freddie-bare-board-test/: Makefile
hosts/daisy/examples/lichen-medium/: Makefile
hosts/daisy/examples/lichen-medium/bare-board-test/: Makefile
hosts/daisy/examples/lichen-medium/chorus/: Makefile
hosts/daisy/examples/lichen-medium/fm-osc/: Makefile
hosts/daisy/examples/lichen-medium/sines/: Makefile
hosts/daisy/examples/patch_init/: Makefile
hosts/daisy/examples/patch_init/calibrator/: Makefile
hosts/daisy/examples/patch_init/chorus/: Makefile
hosts/daisy/examples/patch_init/fm-osc/: Makefile
hosts/daisy/examples/shared/include/: clocked-lfo.h  signaletic-lfos-signals.h  summed-cv-in.h
hosts/daisy/examples/versio/: Makefile
hosts/daisy/examples/versio/filter/: Makefile
hosts/daisy/examples/versio/pole-mix-filter/: Makefile
hosts/daisy/examples/versio/sines/: Makefile
hosts/daisy/include/: BufferView.h  cc-signals.h  daisy-bluemchen-host.h  daisy-dpt-host.h  daisy-patch-sm-host.h  daisy-versio-host.h  dspcoffee-dpt-device.hpp  dust-gate.h  electrosmith-patch-init-device.hpp  kxmx-bluemchen-device.hpp  kxmx-nehcmeulb-device.hpp  lichen-bifocals-device.hpp  lichen-four-device.hpp  lichen-freddie-device.hpp  lichen-medium-device.hpp  lichen-medium-host.h  lichen-medium-module.h  looper-view.h  ne-versio-device.hpp  patchsm-device.hpp  sig-daisy-board.hpp  sig-daisy-patch-sm.hpp  sig-daisy-seed.hpp  signaletic-daisy-host.h  signaletic-daisy-host.hpp  signaletic-host.h
hosts/daisy/src/: daisy-bluemchen-host.cpp  daisy-dpt-host.cpp  daisy-patch-sm-host.cpp  daisy-versio-host.cpp  lichen-medium-host.cpp  sig-daisy-patch-sm.cpp  sig-daisy-seed.cpp  signaletic-daisy-host.cpp  signaletic-host.c
hosts/web/: README.md  build.sh
hosts/web/examples/midi-to-freq/: index.html
hosts/web/examples/oscillator/: index.html  signaletic-oscillator-worklet.js  web-bluemchen.css
hosts/web/examples/print-silence/: index.html
libsignaletic/: build-libsignaletic-wasm.sh  generate-wasm-bindings.sh  meson.build  wasm-cross-compile.txt
libsignaletic/examples/console/src/: print-sine.c
libsignaletic/include/: libsignaletic.h
libsignaletic/src/: libsignaletic.c
libsignaletic/tests/: test-libsignaletic.c  test-libsignaletic.html
libsignaletic/tests/util/: buffer-test-utils.c
libsignaletic/tests/util/include/: buffer-test-utils.h
libsignaletic/wasm/bindings/: libsignaletic-web-bindings.idl
libsignaletic/wasm/bindings/include/: libsignaletic-web.h
libsignaletic/wasm/bindings/src/: libsignaletic-web-wrapper.cpp  libsignaletic-web.cpp
libstar/: generate-wasm-bindings.sh  meson.build  setup-emscripten-env.sh  wasm-cross-compile.txt
libstar/examples/console/src/: print-sine.c
libstar/include/: libstar.h
libstar/src/: libstar.c
libstar/tests/: test-core-functions.c  test-libstar.c  test-libstar.html
libstar/tests/util/: buffer-test-utils.c
libstar/tests/util/include/: buffer-test-utils.h
libstar/wasm/bindings/: libstar-web-bindings.idl
libstar/wasm/bindings/include/: libstar-web.h
libstar/wasm/bindings/src/: libstar-web-wrapper.cpp  libstar-web.cpp
(+31 files in other folders)
